tests/ui/consts/issue-73976-polymorphic.stderr
error[E0158]: constant pattern depends on a generic parameter
  --> $DIR/issue-73976-polymorphic.rs:20:37
   |
LL | impl<T: 'static> GetTypeId<T> {
   | -----------------------------
LL |     pub const VALUE: TypeId = TypeId::of::<T>();
   |     ----------------------- constant defined here
...
LL |     matches!(GetTypeId::<T>::VALUE, GetTypeId::<T>::VALUE)
   |                                     ^^^^^^^^^^^^^^^^^^^^^

error[E0158]: constant pattern depends on a generic parameter
  --> $DIR/issue-73976-polymorphic.rs:31:42
   |
LL | impl<T: 'static> GetTypeNameLen<T> {
   | ----------------------------------
LL |     pub const VALUE: usize = any::type_name::<T>().len();
   |     ---------------------- constant defined here
...
LL |     matches!(GetTypeNameLen::<T>::VALUE, GetTypeNameLen::<T>::VALUE)
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0158`.
